fixed button alignment issue

--- a/src/components/ui/PlanCard/index.scss
+++ b/src/components/ui/PlanCard/index.scss
@@ -247,6 +247,10 @@
     }
   }
 
+  .overview-footer {
+    justify-content: flex-end !important;
+  }
+
   .footer {
     border-top: 1px solid #cbd5e1;
     margin: 0 -30px;
